Bug 128788 - Crash when trying to put autovalue on a field of a table
Summary: Crash when trying to put autovalue on a field of a table
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
6.4.0.0.alpha1+
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.4.0.1 target:6.5.0
Keywords: bibisected, bisected, haveBacktrace, regression
Depends on:
Blocks:
 
Reported: 2019-11-13 21:19 UTC by Julien Nabet
Modified: 2019-11-15 10:51 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
example odb (3.06 KB, application/vnd.oasis.opendocument.database)
2019-11-13 21:20 UTC, Julien Nabet
Details
bt with debug symbols (6.22 KB, text/plain)
2019-11-13 21:21 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Julien Nabet 2019-11-13 21:19:58 UTC
Description:
On pc Debian x86-64 with master sources updated today, I get a crash when editing a table and trying to set autovalue on a field.

Steps to Reproduce:
1. Retrieve test.odb attached (a brand new embedded HSQLDB odb)
2. Launch Base with test.odb
3. Edit table
4. try to set autovalue on a field

Actual Results:
Crash

Expected Results:
No crash


Reproducible: Always


User Profile Reset: Yes



Additional Info:
Comment 1 Julien Nabet 2019-11-13 21:20:19 UTC
Created attachment 155792 [details]
example odb
Comment 2 Julien Nabet 2019-11-13 21:21:04 UTC
Created attachment 155793 [details]
bt with debug symbols
Comment 3 Julien Nabet 2019-11-13 21:26:15 UTC
Caolán: thought you might be interested in this one.
Indeed, taking a look at git history of files in bt, I noticed:
https://cgit.freedesktop.org/libreoffice/core/commit/?id=8c66efa030e98cfdf5da20be368566d64e43c5d1
Comment 4 Xisco Faulí 2019-11-13 22:30:44 UTC
I believe this is a regression from

https://cgit.freedesktop.org/libreoffice/core/commit/?id=8c66efa030e98cfdf5da20be368566d64e43c5d1

author	Caolán McNamara <caolanm@redhat.com>	2019-09-05 12:22:38 +0100
committer	Caolán McNamara <caolanm@redhat.com>	2019-09-12 20:28:14 +0200
commit 8c66efa030e98cfdf5da20be368566d64e43c5d1 (patch)
tree 88c9fb335349fd1b7b285d46108e5d41a3c9aac4
parent 8150219824a1d08c4a22fd8bb7cc63fe2aa88074 (diff)
weld OCopyTableWizard cluster

Bisected with: bibisect-linux64-6.4

Adding Cc: to Caolán McNamara

I'm saying 'I believe' because after that commit, the attached document crashes at import time. The import crash was fixed by https://cgit.freedesktop.org/libreoffice/core/commit/?id=0f85a718dc0d241a8aa1b2d27accb575367691fe
Comment 5 Julien Nabet 2019-11-13 22:41:29 UTC
(In reply to Xisco Faulí from comment #4)
> ...
> I'm saying 'I believe' because after that commit, the attached document
> crashes at import time. The import crash was fixed by
> https://cgit.freedesktop.org/libreoffice/core/commit/
> ?id=0f85a718dc0d241a8aa1b2d27accb575367691fe

I don’t understand what you mean since i created the file and LO crashed during autovalue editing with master sources updated today.
So i don’t know how it could be related with a commit and another fix commit from September. Did I miss something?
Comment 6 Xisco Faulí 2019-11-13 22:45:55 UTC
(In reply to Julien Nabet from comment #5)
> (In reply to Xisco Faulí from comment #4)
> > ...
> > I'm saying 'I believe' because after that commit, the attached document
> > crashes at import time. The import crash was fixed by
> > https://cgit.freedesktop.org/libreoffice/core/commit/
> > ?id=0f85a718dc0d241a8aa1b2d27accb575367691fe
> 
> I don’t understand what you mean since i created the file and LO crashed
> during autovalue editing with master sources updated today.
> So i don’t know how it could be related with a commit and another fix commit
> from September. Did I miss something?

Just saying it might be another commit between https://cgit.freedesktop.org/libreoffice/core/commit/?id=8c66efa030e98cfdf5da20be368566d64e43c5d1 and https://cgit.freedesktop.org/libreoffice/core/commit/?id=0f85a718dc0d241a8aa1b2d27accb575367691fe but everything points to https://cgit.freedesktop.org/libreoffice/core/commit/?id=8c66efa030e98cfdf5da20be368566d64e43c5d1
Comment 7 Commit Notification 2019-11-14 10:18:38 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-4":

https://git.libreoffice.org/core/commit/e840a7d5707c598378a4ff0a47bd6fc31e85b7e0

Resolves: tdf#128788 crash in autovalue

It will be available in 6.4.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2019-11-14 12:38:00 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/da30c06a119f06e59895ea889a5daa149929dfe9

Resolves: tdf#128788 crash in autovalue

It will be available in 6.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Julien Nabet 2019-11-15 10:50:58 UTC
With master sources updated yesterday, I don't reproduce the crash.
Thank you Caolán!