Resolves: tdf#128788 crash in autovalue

Change-Id: Ifeb3b3fcb464e1d6db7e1a4a557b34b3ee30c82a